# DegreeProductRule

./: .gitignore  AchlioptasGrowthProcess.m  Cargo.toml  ClusterSizesRange.m  DPRGlobalChoice.m  PercAveragesRange.m  PercMaxJumpMeans.m  README.md  run_benchmark.sh  run_scaling.sh
dpr-original/: DPRGrowthProcess.m
dpr-rust/: Cargo.toml  run_benchmark.sh  run_scaling.sh
dpr-rust/src/: growth.rs  main.rs  percolation.rs  statistics.rs  union_find.rs
src/: global_choice.rs  growth.rs
