[package]
name = "degree_product_rule"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dpr"
path = "src/main.rs"

[dependencies]
rayon = "1.10"
rand = "0.8"
rand_xoshiro = "0.6"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
rustc-hash = "1.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
